--- a/app/globals.css
+++ b/app/globals.css
@@ -74,12 +74,9 @@ body,
  
 @layer base {
   * {
-    border-color: hsl(var(--border));
-    border-width: 1px;
-    border-style: solid;
+    @apply border-border;
   }
   body {
-    background-color: hsl(var(--background));
-    color: hsl(var(--foreground));
+    @apply bg-background text-foreground;
   }
 }
